# solo8_tutorials

./: README.md  environment.yml
EPD_tutorial/: README.md  environment.yml  epd_data_loader.ipynb
EUI_tutorial/: 1_introduction.ipynb  README.md
MAG_tutorial/: LICENSE.md  README.md  analysis.ipynb  analysis_helpers.py  data.ipynb  metadata.ipynb  requirements.txt
Metis_tutorial/: README.md  metis_aux_lib.py  metis_nb1_data-visualization.ipynb  metis_nb3_ne_K_F_maps.ipynb
PHI_tutorial/: LICENCE  README.md  belfast_data_tutorial.ipynb  belfast_helper.py  requirements.txt
RPW_tutorial/: .dockerignore  .gitignore  .pre-commit-config.yaml  1_about_rpw_data.ipynb  2_get_rpw_data.ipynb  3a_rpw_tnr_data_tutorial.ipynb  3b_rpw_tds_data_tutorial.ipynb  Dockerfile  LICENSE  MANIFEST.in  README.md  install.sh  install_cdf.sh  ipynb_to_html.sh  pyproject.toml  start_tuto.sh  tds_helpers.py
RPW_tutorial/html/: 1_about_rpw_data.html  2_get_rpw_data.html  3a_rpw_tnr_data_tutorial.html  3b_rpw_tds_data_tutorial.html
SPICE_tutorial/: README.md  spice-tutorial.ipynb
STIX_tutorial/: README.md  stix_tutorial.ipynb
SWA_tutorial/: README.md  SWA_Intro.pptx
SWA_tutorial/EAS-demo/: SWA-EAS.ipynb
SWA_tutorial/HIS-demo/: HIS_Demo.yaml  HIS_Jupyter_demo.ipynb  requirements.txt  solo_L3_swa-his-comp_20220120_10min_V00_revD.cdf  solo_L3_swa-his-comp_20220510_10min_V01.cdf
SWA_tutorial/PAS-demo/: Hands-on_PAS_L2_data_(SOAR).ipynb  spectro.py  (+1 more)
SolO-HI_tutorial/: README.md  d1lincor.sav  d2lincor.sav  d3lincor.sav  d4lincor.sav  newbmd1.sav  newbmd2.sav  newbmd3.sav  newbmd4.sav  shifits2grid.py  solohi_tutorial.ipynb
sunpy_tutorial/: README.md
(+1 files in other folders)
